<resources>
    <string name="connection_class">connection class</string>
    <string name="rsrp">RSRP_ServingCell</string>
    <string name="rsrp_neighborcell">RSRP_NeighborCell</string>
    <string name="rsrq_servingcell">RSRQ_ServingCell</string>
    <string name="rerq_neighborcell">RERQ_NeighborCell</string>
    <string name="cinr_servingcell">CINR_ServingCell</string>
    <string name="cinr_neighborcell">CINR_NeighborCell</string>
    <string name="area_code">area code</string>
    <string name="plmn">plmn</string>
    <string name="cell_id">cell id</string>
    <string name="network_type">network type</string>
    <string name="current_time">current time</string>
    <string name="altitude">latitude</string>
    <string name="longtitude">longitude</string>
    <string name="latency">latency</string>
    <string name="up_stream_speed_down_stream_speed">Up Stream Speed \n\nDown Stream Speed :</string>
    <string name="textview">Serving cell signal strength : </string>
    <string name="textview2">Neighbor cell signal strength : </string>
    <string name="textview3">Serving cell signal quality : </string>
    <string name="textview5">Neighbor cell signal quality : </string>
    <string name="textview6">Serving cell signal noise : </string>
    <string name="textview7">Neighbor cell signal noise : </string>
    <string name="textview8">Serving cell area code : </string>
    <string name="textview9">Serving cell PLMN : </string>
    <string name="textview10">Serving cell id : </string>
    <string name="textview11">Network Type : </string>
    <string name="textview12">date and time : </string>
    <string name="textview13">latitude : </string>
    <string name="textview14">longitude : </string>
    <string name="textview15">latency : </string>
    <string name="app_name">mppoint</string>
    <string name="StrengthData">Get Data</string>
    <string name="Serving_cell_strength">Serving cell strength</string>
    <string name="Neighbor_cell_strength">Neighbor cell strength</string>
    <string name="Serving_cell_quality">Serving cell quality</string>
    <string name="Neighbor_cell_quality">Neighbor cell quality</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="StartButton">Start</string>
    <string name="mapbox_access_token">pk.eyJ1IjoidG1vaiIsImEiOiJjazNpaGdwZ3cwNXowM2JvMXpxMXcxcHRsIn0.oNXsSNYPmCwJjW9PZvGeLg</string>
    <string name="Button">Start Online</string>
    <string name="title">Rhoduim Project</string>
    <string name="start_ofline">Start Ofline</string>
    <string name="RSRP_ServingCell">rsrp_sc</string>
    <string name="RSRQ_ServingCell">rsrq_sc</string>
    <string name="CINR">cinr</string>
    <string name="TAC">tac</string>
    <string name="PLMN">plmn</string>
    <string name="save">save</string>
    <string name="id">ID</string>
    <string name="rsrp_nc">rsrp_nc</string>
    <string name="rsrq_nc">rsrq_nc</string>
    <string name="all">all</string>
    <string name="welcome_to_our_application">welcome_to_our_application</string>
    <string name="welcomeText">welcome to our application</string>
</resources>